# octoflow-plugins

./: .gitignore  README.md  pyproject.toml
examples/: download.sh  example_artifact_handler_dict.py  example_artifact_handler_pandas.py  example_csv_dataloader.py  example_json_dataloader.py  example_list_artifact_handlers.py  example_log_artifacts_dict.py  example_log_artifacts_pandas.py  example_stubs.py
src/octoflow-stubs/data/: loader.pyi
src/octoflow_plugins/: __init__.py
src/octoflow_plugins/data/: __init__.py  loaders.py
src/octoflow_plugins/tracking/: __init__.py
src/octoflow_plugins/tracking/artifacts/: __init__.py  json_.py  pandas_handler.py  pickle_.py  safetensors_.py  torch_.py  transformers_.py  transformers_handler.py
